Fixed testing errors, cleaned repository, and fixed libraries and modules errors